# jarvis

./: .env.example  .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
agents/: README.md  react_agent.py
docs/: getting-started.md
docs/guides/: contributing.md  prompt-engineering.md
examples/: hello_jarvis.py  multi_model_compare.py  ollama_chat.py  prompt_from_library.py  run_agent.py
prompts/: README.md
prompts/analysis/: data_insights.md
prompts/coding/: code_review.md  debug_helper.md  docstring_writer.md
prompts/life/: learning_plan.md
prompts/work/: meeting_notes.md  task_breakdown.md
prompts/writing/: email_professional.md  summarize.md
tools/: email_tool.py  web.py
tools/llm/: claude_client.py  ollama_client.py  openai_client.py
tools/utils/: console.py  file_utils.py
workflows/: README.md
