[project]
name = "jarvis-ai-toolkit"
version = "0.1.0"
description = "A personal AI toolkit for work and life — inspired by Iron Man's JARVIS"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["ai", "llm", "claude", "openai", "automation", "toolkit"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

dependencies = [
  "anthropic>=0.40.0",
  "openai>=1.50.0",
  "python-dotenv>=1.0.0",
  "rich>=13.0.0",
  "httpx>=0.27.0",
]

[project.optional-dependencies]
automation = [
  "playwright>=1.48.0",
]
data = [
  "pandas>=2.0.0",
  "openpyxl>=3.1.0",
]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.7.0",
  "mypy>=1.10.0",
]

[project.urls]
Homepage = "https://github.com/khanhhust200897/jarvis"
Repository = "https://github.com/khanhhust200897/jarvis"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tools", "agents", "workflows"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
